# tryfol

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  shell.nix  tryfol.sublime-project
dbusmenu-glib/: Cargo.toml  docs.md
dbusmenu-glib-sys/: Cargo.toml  build.rs
dbusmenu-glib-sys/src/: lib.rs
dbusmenu-glib-sys/tests/: abi.rs  constant.c  layout.c
dbusmenu-glib/src/: lib.rs
dbusmenu-glib/src/auto/: client.rs  enums.rs  menuitem.rs  menuitem_proxy.rs  mod.rs  server.rs  versions.txt
dbusmenu-glib/tests/: it_compiles.rs
ipc/: Cargo.toml
ipc-macros/: Cargo.toml
ipc-macros/src/: lib.rs  protocol.rs  rw.rs  utils.rs
ipc-macros/src/protocol/: generate.rs  mod.rs  parse.rs
ipc-macros/tests/: rw.rs
ipc/src/: client.rs  errors.rs  lib.rs  packet.rs  rw.rs
ipc/src/protocol/: client.rs  mod.rs  server.rs  writable.rs
src/: audio.rs  battery.rs  brigthness.rs  clock.rs  hyprland.rs  main.rs  mpris.rs  network.rs  power.rs  psutil.rs  rfkill.rs  style.scss  systray.rs  widget_ext.rs
src/backend/: hyprland.rs  mod.rs  rfkill.rs
src/backend/hyprland/: control.rs  events.rs  mod.rs
src/backend/mpris/: mod.rs  player.rs  raw.rs
src/backend/status_notifier/: host.rs  item.rs  mod.rs  watcher.rs
src/backend/status_notifier/proxy/: item.rs  mod.rs  watcher.rs
src/bluetooth/: dbus.rs  mod.rs
src/dbusmenu/: mod.rs
src/extensions/: mod.rs  number.rs  widget.rs
src/modules/: clock.rs  hyprland.rs  mod.rs  mpris.rs  powerbutton.rs  psutil.rs  systray.rs
src/modules/power/: battery.rs  brigthness.rs  mod.rs
src/notifier_host/: host.rs  icon.rs  item.rs  mod.rs  watcher.rs
src/notifier_host/proxy/: mod.rs
tryfol-bar/: Cargo.toml
tryfol-bar/src/: audio.rs  main.rs  network.rs  things.rs
tryfol-bar/src/backend/: battery.rs  logind.rs  rfkill.rs
tryfol-bar/src/backend/dbusmenu/: mod.rs  proxy.rs
tryfol-bar/src/backend/hyprland/: control.rs  events.rs  mod.rs
tryfol-bar/src/backend/mpris/: mod.rs  player.rs  raw.rs
tryfol-bar/src/backend/status_notifier/: host.rs  item.rs  mod.rs  watcher.rs
tryfol-bar/src/backend/status_notifier/proxy/: item.rs  watcher.rs
tryfol-bar/src/bluetooth/: dbus.rs  mod.rs
tryfol-bar/src/extensions/: number.rs  slice.rs  widget.rs
tryfol-bar/src/modules/: clock.rs  hyprland.rs  mod.rs  mpris.rs  powerbutton.rs  psutil.rs  systray.rs
tryfol-bar/src/modules/power/: battery.rs  brigthness.rs  darkman.rs  mod.rs
tryfol-daemon/: Cargo.toml
tryfol-daemon/src/: lib.rs  main.rs
tryfol-daemon/src/modules/: mod.rs
tryfol-daemon/src/tracing/: layer.rs  mod.rs
tryfol-ipc/: Cargo.toml
tryfol-ipc/src/: daemon_control.rs  lib.rs
tryfolctl/: Cargo.toml
tryfolctl/src/: main.rs
