[dependencies]
glib = ">=0.15"
libc = "0.2"

[dependencies.ffi]
package = "dbusmenu-glib-sys"
path = "../dbusmenu-glib-sys"
version = "0.1.0"

[features]
dox = ["ffi/dox", "glib/dox"]

[lib]
name = "dbusmenu_glib"

[package]
categories = ["api-bindings", "gui"]
description = "Rust bindings to dbusmenu-glib"
edition = "2021"
homepage = "https://github.com/ralismark/dbusmenu-rs"
keywords = ["gtk-rs"]
license = "LGPL-3.0-only"
name = "dbusmenu-glib"
readme = "/nix/store/bh99v42b66biz6yk9xxi7mzl0yhwwdd5-README.md"
repository = "https://github.com/ralismark/dbusmenu-rs"
version = "0.1.0"

[package.metadata.docs.rs]
features = ["dox"]
