[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
ipc-macros.workspace = true
# not used directly, but needed by ipc-macros
anyhow.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync", "rt"] }

thiserror = "2"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
