[package]
name = "ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
ipc-macros.workspace = true

anyhow.workspace = true
async-stream.workspace = true
futures.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync", "rt", "time", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
