[package]
name = "tryfol-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
ipc.workspace = true
tryfol-ipc.workspace = true

anyhow.workspace = true
async-stream.workspace = true
futures.workspace = true
humantime.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
